--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ book:
   date: ""
   search: true
   repo-url: https://github.com/mpjashby/crimemappingbook/
-  downloads: [pdf, epub]
+  downloads: [epub]
   sharing: [twitter, facebook, linkedin]
   chapters:
     - index.qmd
@@ -15,6 +15,8 @@ book:
     - 01_getting_started/index.qmd
     - 02_your_first_crime_map/index.qmd
     - 03_data_wrangling/index.qmd
+    - 04_code_with_style/index.qmd
+    # - 05_your_second_crime_map/index.qmd
 
 format:
   html:
@@ -22,5 +24,3 @@ format:
     css: css/styles.css
     include-in-header:
       - header.html
-  pdf:
-    documentclass: scrreprt
