--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ book:
     - 02_your_first_crime_map/index.qmd
     - 03_data_wrangling/index.qmd
     - 04_code_with_style/index.qmd
-    # - 05_your_second_crime_map/index.qmd
+    - 05_your_second_crime_map/index.qmd
 
 format:
   html:
