--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,7 @@ book:
     - 03_data_wrangling/index.qmd
     - 04_code_with_style/index.qmd
     - 05_your_second_crime_map/index.qmd
+    - 06_map_context/index.qmd
 
 format:
   html:
