--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ book:
     - 04_code_with_style/index.qmd
     - 05_your_second_crime_map/index.qmd
     - 06_map_context/index.qmd
+    - 07_handling_bugs/index.qmd
 
 format:
   html:
