Remove unfinished chapters, add read-functions appendix

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,14 +11,16 @@ book:
   sharing: [twitter, facebook, linkedin]
   chapters:
     - index.qmd
-    - 00_setup/index.qmd
-    - 01_getting_started/index.qmd
-    - 02_your_first_crime_map/index.qmd
-    - 03_data_wrangling/index.qmd
-    - 04_code_with_style/index.qmd
-    - 05_your_second_crime_map/index.qmd
-    - 06_map_context/index.qmd
+    # - 00_setup/index.qmd
+    # - 01_getting_started/index.qmd
+    # - 02_your_first_crime_map/index.qmd
+    # - 03_data_wrangling/index.qmd
+    # - 04_code_with_style/index.qmd
+    # - 05_your_second_crime_map/index.qmd
+    # - 06_map_context/index.qmd
     - 07_handling_bugs/index.qmd
+  appendices:
+    - appendices/read_functions.qmd
 
 format:
   html:
