--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,7 @@ book:
   output-file: "learn_crime_mapping_with_r"
   sharing: [twitter, facebook, linkedin]
   twitter-card: true
+  license: "Creative Commons Attribution 4.0 International licence"
   chapters:
     - index.qmd
     - 00_setup/index.qmd
@@ -33,6 +34,10 @@ book:
   appendices:
     - appendices/read_functions.qmd
     - appendices/common_errors.qmd
+  page-footer:
+    center:
+      - text: "This book is available under a Creative Commons Attribution 4.0 International licence"
+        href: https://creativecommons.org/licenses/by/4.0/
 
 format:
   html:
