Add Chapter 16 and clean up outstanding issues
Fixes #16
Fixes #17
Fixes #18
Fixes #19
Fixes #20

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,7 @@ book:
     - 13_crime_series/index.qmd
     - 14_writing_reports/index.qmd
     - 15_no_maps/index.qmd
+    - 16_mapping_time/index.qmd
   appendices:
     - appendices/read_functions.qmd
     - appendices/common_errors.qmd
