Fix typos in Chapter 9

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -72,6 +72,7 @@ format:
     include-after-body: include/webex.js
     resources:
     - "data/*"
+    - "resources/*"
 
 filters:
   - line-highlight
